# gql-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
docs/spec/: GraphQL.html
src/: lib.rs  types.rs
